# EBD-PLANNER-API

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
src/ebd_planner/: app.py  schemas.py  security.py
src/ebd_planner/routers/: auth.py  church.py  users.py
src/prisma/: schema.prisma
src/prisma/migrations/20250325135957_db_update/: migration.sql
src/prisma/migrations/20250325140924_db_tables_update/: migration.sql
